# hockey-reminder-lambda-rust

./: Cargo.toml  README.md  sample_response.json
src/: benchapp_csv.rs  daysmart.rs  discord.rs  handler.rs  ical.rs  lib.rs  main.rs
src/model/: arena.rs  event.rs  event_type.rs  game.rs  locker_room.rs  mod.rs  resource.rs  team.rs
tests/: benchapp_csv_tests.rs  daysmart_tests.rs  discord_tests.rs  handler_tests.rs  ical_tests.rs  sample.ics  schedule.csv
