[package]
name = "hockey-reminder-lambda-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.14.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = { version = "3.1.2", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "std"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }